# Spectra_Morph_Sequencer

./: .gitignore  CMakeLists.txt  README.md  SPECS_01_vision_and_theory.md  SPECS_02_audio_engine.md  SPECS_03_fft_pipeline.md  SPECS_04_particle_model.md  SPECS_05_particle_physics.md  SPECS_06_spectral_ecology.md  SPECS_07_resynthesis.md  SPECS_08_phase_management.md  SPECS_09_data_structures.md  SPECS_10_scheduler_and_degradation.md  SPECS_11_musical_interaction.md  SPECS_12_threading_and_ownership.md  SPECS_13_file_granular_mode.md
src/core/memory/: AdditiveBuffer.h  PartialPool.h  RingBuffer.h
src/core/scheduler/: Scheduler.h
src/core/threading/: ThreadUtils.h
src/core/types/: ExternalField.h  Partial.h  Peak.h  Snapshot.h  Types.h
src/dsp/debug/: SpectralMetrics.h
src/dsp/fft/: FFTProcessor.h
src/dsp/phase/: PhaseManager.h
src/dsp/resynthesis/: ResidualSynth.h  Resynthesizer.h
src/dsp/scramble/: SpectralFrameStore.h  TemporalScrambler.h
src/dsp/tracking/: PartialTracker.h  PeakUtils.h
src/plugin/: BuildVersion.h.in  FileSourceManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TempoUtils.h  WindowPatternController.h
src/simulation/: ParticleSimulator.h
tests/: TestRunner.cpp  test_fidelity.cpp  test_file_granular_fidelity.cpp  test_file_segment.cpp  test_memory.cpp  test_phase2_validation.cpp  test_pitch_spread.cpp  test_resynthesis.cpp  test_scheduler.cpp  test_scramble.cpp  test_tempo_utils.cpp  test_triangle_resynth.cpp  test_window_pattern.cpp
